--- a/sass/_sass_config.scss
+++ b/sass/_sass_config.scss
@@ -2,13 +2,52 @@
 @import "normalize";
 @import "compass";
 @import "placeholders";
+@import "mixins";
 
 $white: #FFF;
 $header-background-color: #2D3032;
 $button-background-color: #A43030;
 $search-textbox-background-color: #212325;
+$search-textbox-color: #bfbfbf;
+$search-submit-background-color: #a43030;
+$search-submit-text-color: #a43030;
 $nav-font-color: #BFBFBF;
+$sidebar-background-color: #a43030;
+$header-font-color: #bfbfbf;
+$header-span-color: #292c2e;
+$header-span-background-color: #ffba00;
+$header-span-button-background: #a43030;
+$header-span-button-color: #fbfbfb;
+$body-background-color: #373a3d;
+$sidewrapper-a-background-color: #a43030;
+$sidewrapper-a-color: #F1C40F;
+$sidebar-wrapper-li-a-color: #555;
+$sidebar-menu-wrapper-navigation-a-color: #D5DDE5;
+$sidebar-menu-wrapper-navigation-a-hover-active-color: #F4DE4B;
 
+// @mixins box-shadow
+$defualt-box-shadow-color: rgba(50, 45, 48, 0.75);
+$default-box-shadow-h-offset: 3px;
+$default-box-shadow-v-offset: 0px;
+$default-box-shadow-blur: 6px;
+$default-box-shadow-spread: 0px;
+$default-box-shadow-inset: false;
+
+// @mixins transition
+$default-transition-property: all;
+$default-transition-duration: ease-in; 
+$default-transition-function: ease-out;
+$default-transition-delay: 0.3s;
+
+// @mixins pie
+$pie-base-class: false;
+$pie-default-approach: relative;
+$pie-behavior: stylesheet-url("/css/PIE.htc");
+
+// @mixins Border Radius
+$default-border-radius: 100px;
+
+// Default font size
 $base-font-size: 14px;
 
 @function em_font_size($size: 14px) {
