--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -4,12 +4,22 @@ body {
     @extend %clearfix;
     margin: 0px;
     padding: 0px;
-    color: $white;
+    background: $body-background-color;
+    width: 100%;
+    height: 100%;
     font: {
-        size: $base-font-size;
+        size: em_font_size($base-font-size);
         family: Arial, Helvetica, sans-serif;
         weight: normal;
     }
+}
+
+a {
+    text-decoration: none;
+}
+
+figure {
+    margin: 0px;
 }
 
 .login {
@@ -20,11 +30,11 @@ body {
     font-size: em_font_size(12px);
     .logo {
         padding-top: 8%;
-        @extend %center_alignment;
+        @extend %text_center;
     }
 
     .login_area {
-        @extend %center_alignment;
+        @extend %text_center;
         @extend %margin_auto;
         padding-top: 5%;
 
@@ -48,7 +58,7 @@ body {
         .user_thumb {
             padding: 0 10px;
             @extend %float_left;
-            @extend %middle_alignment;
+            @extend %vertical_middle;
 
             & > span, & > img {
                 @extend %float_left;
@@ -73,7 +83,7 @@ body {
             padding: 11px 13px;
             background-color: $white;
             width: 300px;
-            @extend %middle_alignment;
+            @extend %vertical_middle;
             @extend %float_left;
         }
     }
@@ -86,15 +96,16 @@ body {
         color: $white;
         font-weight: bold;
         width:220px;
-        @extend %middle_alignment;
+        @extend %vertical_middle;
     }
 }
 
-.wraper {
+/* .wraper {
 
     .header {
         background-color: $header-background-color;
         height: 50px;
+        font-size: em_font_size(13px);
 
         .header_nav {
             margin: 0px 8%;
@@ -111,25 +122,260 @@ body {
             }
 
             .search {
-                padding: 10px 0px;
+                padding: 10px 0px 10px 20px;
                 @extend %float_right;
             }
 
             .nav > ul li {
                 @extend %float_right;
                 margin-left: 60px;
-                padding: 16px 0px;
+                padding: 18px 0px;
 
                 & a {
                     text-decoration: none;
                     color: $nav-font-color;
                 }
             }
-
         }
     }
 
     .content {
         padding: 0px 8%;
+
+        .left_nav {
+            
+        }
     }
+} */
+
+.gradient {
+    background: rgb(34,36,38); // Old browsers 
+    background: -moz-linear-gradient(top,  rgba(34,36,38,1) 0%, rgba(55,59,62,1) 100%); // FF3.6+ 
+    background: -webkit-gradient(linear, left top, left top, color-stop(0%,rgba(34,36,38,1)), color-stop(100%,rgba(55,59,62,1))); // Chrome,Safari4+ 
+    background: -webkit-linear-gradient(top,  rgba(34,36,38,1) 0%,rgba(55,59,62,1) 100%); // Chrome10+,Safari5.1+ 
+    background: -o-linear-gradient(top,  rgba(34,36,38,1) 0%,rgba(55,59,62,1) 100%); // Opera 11.10+
+    background: -ms-linear-gradient(top,  rgba(34,36,38,1) 0%,rgba(55,59,62,1) 100%); // IE10+
+    background: linear-gradient(to top,  rgba(34,36,38,1) 0%,rgba(55,59,62,1) 100%); // W3C
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#222426', endColorstr='#373b3e',GradientType=0 ); // IE6-9 
+
+    .wrapper { 
+        width: 99%; 
+        overflow: hidden; 
+        @extend %margin_auto;
+        @extend %position_relative; 
+
+        .logo {
+            padding: 9px 2px 5px;
+            @extend %float_left;
+        }
+
+        .notification {
+            margin-left: 3px;
+        }
+
+        .pieClass { 
+            @include pie();
+        }
+
+        figure.pieClass img,
+        .pieClass > img { 
+            @extend %display_block; 
+        }
+
+    }
+}
+
+.topSec {
+    z-index: 1033;
+    position: fixed;
+    top: 0;
+    width: 100%;
+
+    ul li {
+        display: inline-block;
+        padding-left: 50px;
+        position: relative;
+
+        a {
+            font-size: 12px;
+            color: $header-font-color;
+            padding: 15px 0px 0px;
+            @extend %display_block;
+
+            span {
+                padding: 5px 9px;
+                @include border-radius();
+                background: $header-span-background-color;
+                color: $header-span-color;
+
+                .btn {
+                    cursor: pointer;
+                    background: $header-span-button-background;
+                    width: 36px;
+                    height: 33px;
+                    margin-left: -4px;
+                    color: $header-span-button-color;
+                    display: inline-block;
+                    @extend %veritical_bottom;
+                    @extend %text_center;
+                }
+            }
+
+            i {
+                font-size: 14px;
+            }
+
+        }
+        
+        a:hover i {
+            color: $white;
+        }
+
+        .fa {
+            padding: 0px 9px;
+        }
+    }
+}
+
+.fa.fa-search {
+    line-height: 1.7px;
+    margin-top: 16px;
+}
+
+.topSec input[type="text"] { 
+    background: $search-textbox-background-color; 
+    border: 0px; 
+    color: $search-textbox-color; 
+    padding: 8px 5px; 
+    margin-top: 8px; 
+    margin-left: 18px; 
+}
+
+.topSec input[type="submit"] { 
+    background: $search-submit-background-color; 
+    width: 31px;
+    height: 33px;
+    border: 0px;
+    margin-left: -3px;
+    color: $search-submit-text-color; 
+}
+
+.floatLeft {
+    @extend %float_left;
+}
+
+.floatRight {
+    @extend %float_right;
+}
+
+.sidebar-wrapper { 
+    background-color: $sidebar-background-color;
+    position: fixed;
+    width: 60px;
+    top: 0px;
+    bottom: 0px;
+    margin-top: 52px;
+    z-index: 2;
+    @include single-box-shadow();
+    @include single-transition();
+
+    ul {
+        padding: 0px 3px;
+        list-style: none;
+
+        li {
+            margin: 0px;
+            border-bottom: 1px solid #851717;
+            @extend %display_block;
+            @include single-box-shadow(rgba(255,255,255,0.2), 1px, 0px, 0px, 0px);
+
+            .tooltip {
+                white-space: nowrap;
+                font-size: em_font_size(16px);
+            }
+
+            a {
+                @extend %display_block; 
+                color: $sidebar-wrapper-li-a-color;
+                font-weight: 300;
+                text-transform: uppercase;
+                padding: 9px 0px;
+                position: relative;
+                text-align: center;
+
+                i {
+                    font-size: em_font_size(24px);
+                    line-height: 34px;
+                    display: inline-block;
+                    text-align: center;
+                    color: $white;
+                }
+            }
+        }
+
+        li.active > a, li.current > a, li.hover > a {
+            text-decoration:none; margin:0px -3px;
+            @extend %position_relative;
+            background-color: $sidewrapper-a-background-color;
+            color: $sidewrapper-a-color;
+            border-left:3px solid $sidewrapper-a-color;
+        }
+
+        li.active > a i, li.current > a i, li:hover > a i { 
+            color: $sidewrapper-a-color; 
+        }
+    }
+        
+    .sidebar-menu-wrapper .navigation li {
+        @include single-box-shadow(rgba(60, 63, 67, 0.95), 1px, 0px, 0px, 0px);
+    }
+}
+
+.sidebar-menu-wrapper {
+    margin-top: 52px;
+    position: fixed;
+    top: 0;
+    @include single-transition();
+    width: 229px;
+    z-index: 1;
+    left: 60px;
+
+    .navigation { 
+        list-style: none outside none;
+        margin: 0 5px;
+        padding: 0;
+        
+        li { 
+            border-bottom: 1px solid #292c2e;
+            margin: 0px 5px 0px 15px; 
+
+            a { 
+                color: $sidebar-menu-wrapper-navigation-a-color;
+                @extend %display_block;
+                font-size: em_font_size(14px);
+                line-height: 22px;
+                padding: 15px 10px 15px 15px;
+                position: relative;
+                text-transform: uppercase; 
+            }
+        }
+        
+        li:hover a, li.active a { 
+            color: $sidebar-menu-wrapper-navigation-a-hover-active-color; 
+        }
+
+        li:hover a:before, li.current a:before, li.active a:before { 
+            color: $sidebar-menu-wrapper-navigation-a-hover-active-color; 
+            content: "";
+            font: {
+                family: FontAwesome;
+                size: em_font_size(8px);
+            } 
+            left: -3px; 
+            position: absolute;
+            text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.2); 
+        }
+
+    }
+
 }
