Login functionality done, also made some changes on db

--- a/sass/_placeholders.scss
+++ b/sass/_placeholders.scss
@@ -26,6 +26,14 @@
     text-align: center;
 }
 
+%text_left {
+    text-align: left;
+}
+
+%text_right {
+    text-align: right;
+}
+
 %margin_auto {
     margin: 0 auto;
 }
