--- a/sass/_sass_config.scss
+++ b/sass/_sass_config.scss
@@ -4,6 +4,9 @@
 @import "placeholders";
 
 $white: #FFF;
+$black: #000;
+$gray: #CCC;
+$red: red;
 $header-background-color: #2D3032;
 $button-background-color: #A43030;
 $search-textbox-background-color: #212325;
